# enum_text_augment

./: Cargo.toml
src/: lib.rs
tests/: 01-basic.rs  02-override.rs  all.rs
