[package]
name = "enum_text_augment"
version = "0.1.0"
authors = ["Henrik Patjens <hpatjens@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dev-dependencies]
trybuild = "1.0.24"

[dependencies]
syn = { version = "1.0.16", features = ["extra-traits"] }
quote = "1.0.3"
proc-macro2 = "1.0.9"

[[test]]
name = "tests"
path = "tests/all.rs"